fix: a lot. 1.21.1 support